src/app/visualizationComponents/BubbleComponent/bubble.component.scss
:host {
    position: absolute;
    overflow: hidden;
    z-index: 1 !important;
    padding: 1px; 
}

:host ::ng-deep {
  .p-accordion-tab:not(.p-accordion-tab-active) {
    .p-toggleable-content {
      height: 0;
      overflow: hidden;
    }
  }

  .p-accordion-tab.p-accordion-tab-active {
    .p-toggleable-content {
      height: auto !important;
      overflow: auto !important;
    }
  }
}
.aggregate-wrapper {
  padding: 50px 20px 5px 20px;
}

/* Button appearance on hover */
.btn-icon:hover {
  transform: scale(1.1); /* Slight enlarge on hover */
  background-color: rgba(0, 0, 0, 0.1); /* Subtle background color on hover */
}
    
.btn-icon {
  margin-right: 10px;
  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}

.flaticon-settings:before {
  font-weight: 800 !important;
}

.flaticon-pin:before {
  font-weight: 800 !important;
}

.flaticon-download:before {
  font-weight: 800 !important;
}

